closDevOrg copy/force-app/main/default/objects/LOS_Stage__mdt/fields/LOS_Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>LOS_Booking_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Booking Stage. See docs/data-dictionary.md for usage.</description>
    <label>Booking Stage</label>
    <type>Checkbox</type>
</CustomField>