closDevOrg copy/force-app/main/default/objects/LOS_Stage__mdt/fields/LOS_TAT_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LOS_TAT_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TAT Enabled. See docs/data-dictionary.md for usage.</description>
    <label>TAT Enabled</label>
    <type>Checkbox</type>
</CustomField>