closDevOrg copy/force-app/main/default/objects/LOS_Stage__mdt/fields/LOS_Terminal_Stage__c.field-meta.xml
<CustomField>
    <fullName>LOS_Terminal_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Terminal Stage. See docs/data-dictionary.md for usage.</description>
    <label>Terminal Stage</label>
    <type>Checkbox</type>
</CustomField>